@@ -65,6 +65,7 @@ import org.netbeans.modules.cnd.makeproject.MakeProject;
 import org.netbeans.modules.cnd.makeproject.MakeProjectGenerator;
 import org.netbeans.modules.cnd.makeproject.api.configurations.MakeConfiguration;
 import org.netbeans.modules.cnd.makeproject.api.configurations.BasicCompilerConfiguration;
+import org.netbeans.modules.cnd.makeproject.api.configurations.ConfigurationDescriptorProvider;
 import org.netbeans.modules.cnd.makeproject.api.remote.FilePathAdaptor;
 import org.netbeans.modules.cnd.makeproject.api.wizards.IteratorExtension;
 import org.netbeans.modules.cnd.makeproject.ui.utils.PathPanel;
@@ -83,10 +84,10 @@ import org.openide.util.NbBundle;
 public class NewMakeProjectWizardIterator implements WizardDescriptor.InstantiatingIterator {
     private static final long serialVersionUID = 1L;
     
-    public static String APPLICATION_PROJECT_NAME = "Application"; // NOI18N
-    public static String DYNAMICLIBRARY_PROJECT_NAME = "DynamicLibrary";  // NOI18N
-    public static String STATICLIBRARY_PROJECT_NAME = "StaticLibrary"; // NOI18N
-    public static String MAKEFILEPROJECT_PROJECT_NAME = "MakefileProject"; // NOI18N
+    public static final String APPLICATION_PROJECT_NAME = "Application"; // NOI18N
+    public static final String DYNAMICLIBRARY_PROJECT_NAME = "DynamicLibrary";  // NOI18N
+    public static final String STATICLIBRARY_PROJECT_NAME = "StaticLibrary"; // NOI18N
+    public static final String MAKEFILEPROJECT_PROJECT_NAME = "MakefileProject"; // NOI18N
     
     static final String PROP_NAME_INDEX = "nameIndex"; // NOI18N
     
@@ -167,8 +168,8 @@ public class NewMakeProjectWizardIterator implements WizardDescriptor.Instantiat
     }
     
     
-    public Set/*<FileObject>*/ instantiate() throws IOException {
-        Set resultSet = new HashSet();
+    public Set<FileObject> instantiate() throws IOException {
+        Set<FileObject> resultSet = new HashSet<FileObject>();
         File dirF = (File)wiz.getProperty("projdir"); // NOI18N
         if (dirF != null) {
             dirF = FileUtil.normalizeFile(dirF);
@@ -179,12 +180,13 @@ public class NewMakeProjectWizardIterator implements WizardDescriptor.Instantiat
             MakeConfiguration extConf = new MakeConfiguration(dirF.getPath(), "Default", MakeConfiguration.TYPE_MAKEFILE); // NOI18N
             String workingDir = (String)wiz.getProperty("buildCommandWorkingDirTextField"); // NOI18N
             String workingDirRel;
-            if (PathPanel.getMode() == PathPanel.REL_OR_ABS)
+            if (PathPanel.getMode() == PathPanel.REL_OR_ABS) {
                 workingDirRel = IpeUtils.toAbsoluteOrRelativePath(dirF.getPath(), FilePathAdaptor.naturalize(workingDir));
-            else if (PathPanel.getMode() == PathPanel.REL)
+            } else if (PathPanel.getMode() == PathPanel.REL) {
                 workingDirRel = IpeUtils.toRelativePath(dirF.getPath(), FilePathAdaptor.naturalize(workingDir));
-            else
+            } else {
                 workingDirRel = IpeUtils.toAbsolutePath(dirF.getPath(), FilePathAdaptor.naturalize(workingDir));
+            }
             workingDirRel = FilePathAdaptor.normalize(workingDirRel);
             extConf.getMakefileConfiguration().getBuildCommandWorkingDir().setValue(workingDirRel);
             extConf.getMakefileConfiguration().getBuildCommand().setValue((String)wiz.getProperty("buildCommandTextField")); // NOI18N
@@ -192,12 +194,13 @@ public class NewMakeProjectWizardIterator implements WizardDescriptor.Instantiat
             // Build result
             String buildResult = (String)wiz.getProperty("outputTextField"); // NOI18N
             if (buildResult != null && buildResult.length() > 0) {
-                if (PathPanel.getMode() == PathPanel.REL_OR_ABS)
+                if (PathPanel.getMode() == PathPanel.REL_OR_ABS) {
                     buildResult = IpeUtils.toAbsoluteOrRelativePath(dirF.getPath(), FilePathAdaptor.naturalize(buildResult));
-                else if (PathPanel.getMode() == PathPanel.REL)
+                } else if (PathPanel.getMode() == PathPanel.REL) {
                     buildResult = IpeUtils.toRelativePath(dirF.getPath(), FilePathAdaptor.naturalize(buildResult));
-                else
+                } else {
                     buildResult = IpeUtils.toAbsolutePath(dirF.getPath(), FilePathAdaptor.naturalize(buildResult));
+                }
                 buildResult = FilePathAdaptor.normalize(buildResult);
                 extConf.getMakefileConfiguration().getOutput().setValue(buildResult);
             }
@@ -205,7 +208,7 @@ public class NewMakeProjectWizardIterator implements WizardDescriptor.Instantiat
             String includeDirectories = (String)wiz.getProperty("includeTextField"); // NOI18N
             if (includeDirectories != null && includeDirectories.length() > 0) {
                 StringTokenizer tokenizer = new StringTokenizer(includeDirectories, ";"); // NOI18N
-                Vector includeDirectoriesVector = new Vector();
+                Vector<String> includeDirectoriesVector = new Vector<String>();
                 while (tokenizer.hasMoreTokens()) {
                     String includeDirectory = tokenizer.nextToken();
                     includeDirectory = IpeUtils.toRelativePath(dirF.getPath(), FilePathAdaptor.naturalize(includeDirectory));
@@ -219,7 +222,7 @@ public class NewMakeProjectWizardIterator implements WizardDescriptor.Instantiat
             String macros = (String)wiz.getProperty("macroTextField"); // NOI18N
             if (macros != null && macros.length() > 0) {
                 StringTokenizer tokenizer = new StringTokenizer(macros, "; "); // NOI18N
-                ArrayList list = new ArrayList();
+                ArrayList<String> list = new ArrayList<String>();
                 while (tokenizer.hasMoreTokens()) {
                     list.add(tokenizer.nextToken());
                 }
@@ -228,28 +231,30 @@ public class NewMakeProjectWizardIterator implements WizardDescriptor.Instantiat
                 extConf.getCCCompilerConfiguration().getPreprocessorConfiguration().getValue().addAll(list);
             }
             // Add makefile and configure script to important files
-            ArrayList importantItems = new ArrayList();
+            ArrayList<String> importantItems = new ArrayList<String>();
             String makefilePath = (String)wiz.getProperty("makefileName"); // NOI18N
             File makefileFile = new File(makefilePath);
             if (makefilePath != null && makefilePath.length() > 0) {
-                if (PathPanel.getMode() == PathPanel.REL_OR_ABS)
+                if (PathPanel.getMode() == PathPanel.REL_OR_ABS) {
                     makefilePath = IpeUtils.toAbsoluteOrRelativePath(dirF.getPath(), FilePathAdaptor.naturalize(makefilePath));
-                else if (PathPanel.getMode() == PathPanel.REL)
+                } else if (PathPanel.getMode() == PathPanel.REL) {
                     makefilePath = IpeUtils.toRelativePath(dirF.getPath(), FilePathAdaptor.naturalize(makefilePath));
-                else
+                } else {
                     makefilePath = IpeUtils.toAbsolutePath(dirF.getPath(), FilePathAdaptor.naturalize(makefilePath));
+                }
                 makefilePath = FilePathAdaptor.normalize(makefilePath);
                 importantItems.add(makefilePath);
             }
             String configurePath = (String)wiz.getProperty("configureName"); // NOI18N
             if (configurePath != null && configurePath.length() > 0) {
                 File configureFile = new File(configurePath);
-                if (PathPanel.getMode() == PathPanel.REL_OR_ABS)
+                if (PathPanel.getMode() == PathPanel.REL_OR_ABS) {
                     configurePath = IpeUtils.toAbsoluteOrRelativePath(dirF.getPath(), FilePathAdaptor.naturalize(configurePath));
-                else if (PathPanel.getMode() == PathPanel.REL)
+                } else if (PathPanel.getMode() == PathPanel.REL) {
                     configurePath = IpeUtils.toRelativePath(dirF.getPath(), FilePathAdaptor.naturalize(configurePath));
-                else
+                } else {
                     configurePath = IpeUtils.toAbsolutePath(dirF.getPath(), FilePathAdaptor.naturalize(configurePath));
+                }
                 configurePath = FilePathAdaptor.normalize(configurePath);
                 importantItems.add(configurePath);
                 
@@ -270,19 +275,20 @@ public class NewMakeProjectWizardIterator implements WizardDescriptor.Instantiat
                     String runConfigure = (String)wiz.getProperty("runConfigure"); // NOI18N
                     if (runConfigure != null && runConfigure.equals("true")) { // NOI18N
                         // If no makefile, create empty one so it shows up in Interesting Files
-                        if (!makefileFile.exists())
+                        if (!makefileFile.exists()) {
                             makefileFile.createNewFile();
+                        }
                             
-                        ShellRunAction shellRunAction = new ShellRunAction();
-                        shellRunAction.performAction(node);
+                        ShellRunAction.performAction(node);
                     }
                 }
                 catch (DataObjectNotFoundException e) {
                 }
             }
             Iterator importantItemsIterator = importantItems.iterator();
-            if (!importantItemsIterator.hasNext())
+            if (!importantItemsIterator.hasNext()) {
                 importantItemsIterator = null;
+            }
             
             MakeProjectGenerator.createProject(dirF, name, makefileName, new MakeConfiguration[] {extConf}, (Iterator)wiz.getProperty("sourceFolders"), importantItemsIterator); // NOI18N
             FileObject dir = FileUtil.toFileObject(dirF);
@@ -291,10 +297,14 @@ public class NewMakeProjectWizardIterator implements WizardDescriptor.Instantiat
             if (extension != null) {
                 final Project p = ProjectManager.getDefault().findProject(dir);
                 if (p instanceof MakeProject) {
-                    MakeProject makeProject = (MakeProject) p;
+                    final MakeProject makeProject = (MakeProject) p;
                     final Map<String,Object> map = extension.clone(wiz);
                     makeProject.addOpenedTask(new Runnable(){
                         public void run() {
+                            // Discovery require a fully completed project
+                            // Make sure that descriptor was stored and readed
+                            ConfigurationDescriptorProvider provider = makeProject.getLookup().lookup(ConfigurationDescriptorProvider.class);
+                            provider.getConfigurationDescriptor(true);
                             if (extension.canApply(map, p)){
                                 try {
                                     extension.apply(map, p);
@@ -317,12 +327,13 @@ public class NewMakeProjectWizardIterator implements WizardDescriptor.Instantiat
             }
         } else if (wizardtype == TYPE_APPLICATION || wizardtype == TYPE_DYNAMIC_LIB || wizardtype == TYPE_STATIC_LIB) {
             int conftype = -1;
-            if (wizardtype == TYPE_APPLICATION)
+            if (wizardtype == TYPE_APPLICATION) {
                 conftype = MakeConfiguration.TYPE_APPLICATION;
-            else if (wizardtype == TYPE_DYNAMIC_LIB)
+            } else if (wizardtype == TYPE_DYNAMIC_LIB) {
                 conftype = MakeConfiguration.TYPE_DYNAMIC_LIB;
-            else if (wizardtype == TYPE_STATIC_LIB)
+            } else if (wizardtype == TYPE_STATIC_LIB) {
                 conftype = MakeConfiguration.TYPE_STATIC_LIB;
+            }
             MakeConfiguration debug = new MakeConfiguration(dirF.getPath(), "Debug", conftype); // NOI18N
             debug.getCCompilerConfiguration().getDevelopmentMode().setValue(BasicCompilerConfiguration.DEVELOPMENT_MODE_DEBUG);
             debug.getCCCompilerConfiguration().getDevelopmentMode().setValue(BasicCompilerConfiguration.DEVELOPMENT_MODE_DEBUG);
@@ -361,7 +372,7 @@ public class NewMakeProjectWizardIterator implements WizardDescriptor.Instantiat
             if (c instanceof JComponent) { // assume Swing components
                 JComponent jc = (JComponent)c;
                 // Step #.
-                jc.putClientProperty(WizardDescriptor.PROP_CONTENT_SELECTED_INDEX, new Integer(i)); // NOI18N
+                jc.putClientProperty(WizardDescriptor.PROP_CONTENT_SELECTED_INDEX, i); // NOI18N
                 // Step name (actually the whole list for reference).
                 jc.putClientProperty(WizardDescriptor.PROP_CONTENT_DATA, steps); // NOI18N
             }
@@ -380,7 +391,7 @@ public class NewMakeProjectWizardIterator implements WizardDescriptor.Instantiat
     
     public String name() {
         return MessageFormat.format(NbBundle.getMessage(NewMakeProjectWizardIterator.class,"LAB_IteratorName"), // NOI18N
-                new Object[] {new Integer(index + 1), new Integer(panels.length) });
+                new Object[] {Integer.valueOf(index + 1), Integer.valueOf(panels.length) });
     }
     
     public boolean hasNext() {
@@ -390,11 +401,15 @@ public class NewMakeProjectWizardIterator implements WizardDescriptor.Instantiat
         return index > 0;
     }
     public void nextPanel() {
-        if (!hasNext()) throw new NoSuchElementException();
+        if (!hasNext()) {
+            throw new NoSuchElementException();
+        }
         index++;
     }
     public void previousPanel() {
-        if (!hasPrevious()) throw new NoSuchElementException();
+        if (!hasPrevious()) {
+            throw new NoSuchElementException();
+        }
         index--;
     }
     public WizardDescriptor.Panel current() {
