@@ -51,6 +51,7 @@ import org.netbeans.modules.cnd.remote.support.RemoteCommandSupport;
  * @author gordonp
  * @author Sergey Grinev
  */
+@org.openide.util.lookup.ServiceProvider(service=org.netbeans.modules.cnd.api.remote.HostInfoProvider.class)
 public class RemoteHostInfoProvider extends HostInfoProvider {
 
     public static class RemoteHostInfo {
@@ -106,7 +107,7 @@ public class RemoteHostInfoProvider extends HostInfoProvider {
                 //N.B.: this is only place where RemoteCommandSupport should take PATH= !!
                 RemoteCommandSupport support = new RemoteCommandSupport(hkey, "PATH=/bin:/usr/bin export"); // NOI18N
                 support.setPreserveCommand(true); // to avoid endless loop
-                isCshShell = new Boolean(support.run() != 0);
+                isCshShell = Boolean.valueOf(support.run() != 0);
             }
             return isCshShell.booleanValue();
         }
